--- a/stile.css
+++ b/stile.css
@@ -6,7 +6,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
+  background-color: #6b5f5f;
 }
 
 .carousel {
@@ -67,16 +67,57 @@ body {
   text-align: center;
   height: auto;
     display: flex;
+  
+    
+  }
+
+  /* Bootstrap carousel image size */
+.carousel-item img {
+  max-height: 50px;
+  width: auto;
+  margin: 0 auto;
+  display: block;
+  object-fit: contain;
+}
+
+ .beni{
+  width: 50%;
+  margin: 50px auto;
+  text-align: center;
+  height: auto;
+  display: flex;
   justify-content: center;  
   align-items: center;
-  background-color: #fff;
-  border-radius: 10px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-  padding: 20px;
-  transition: transform 0.3s ease;
+  background-color: #bd1212;
+  border-radius: 100px;
+  box-shadow: 0 50px 100px rgb(255, 255, 255);
+  transition: transform 0.3s ease;  
 
-    
-  } 
+}
+.myButton {
+	box-shadow: 3px 4px 0px 0px #9c9898;
+	background:linear-gradient(to bottom, #5c5554 5%, #685d5d 100%);
+	background-color:#000000;
+	border-radius:18px;
+	border:1px solid #d8d6d6;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:23px;
+	padding:8px 25px;
+	text-decoration:none;
+	text-shadow:-1px 0px 0px #29201f;
+}
+.myButton:hover {
+	background:linear-gradient(to bottom, #cecece 5%, #5f5d5d 100%);
+	background-color:#1f1a1a;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
+}
+.center-text {
+  text-align: center;
+}
 
-  
-  
