--- a/stile.css
+++ b/stile.css
@@ -6,7 +6,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
-  background-color: #6b5f5f;
+  background-color: #524f4fb2;
 }
 
 .carousel {
@@ -16,7 +16,7 @@ body {
   margin: 50px auto;
   overflow: hidden;
   border-radius: 10px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 10px rgb(0, 0, 0);
 }
 
 .slides {
@@ -49,7 +49,7 @@ body {
 .control-btn {
   background-color: rgba(0, 0, 0, 0.5);
   border: none;
-  color: white;
+  color: rgb(73, 69, 69);
   font-size: 2rem;
   cursor: pointer;
   padding: 10px;
@@ -88,9 +88,9 @@ body {
   display: flex;
   justify-content: center;  
   align-items: center;
-  background-color: #bd1212;
+  background-color: #746e6e;
   border-radius: 100px;
-  box-shadow: 0 50px 100px rgb(255, 255, 255);
+  box-shadow: 0 50px 100px rgb(92, 90, 90);
   transition: transform 0.3s ease;  
 
 }
@@ -122,7 +122,7 @@ body {
 }
 
 .grupo-fotos {
-  background-color: #fdfdfd;
+  background-color: #5c5757;
   display:flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -146,4 +146,37 @@ footer.fixed-bottom {
   width: 100%;
   z-index: 1030;
 }
+.galeria {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 30px;
+        justify-content: center;
+        margin-top: 30px;
+      }
+      .galeria-item {
+        width: 220px;
+        background: #e9e9e9;
+        border-radius: 12px;
+        box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+        padding: 16px;
+        text-align: center;
+      }
+      .galeria-item img {
+        width: 900%;
+        max-width: 180px;
+        height: auto;
+        border-radius: 8px;
+        margin-bottom: 10px;
+      }
+      .galeria-item h2 {
+        font-size: 1.1rem;
+        margin: 0;
+        color: #333;
+      }
+      .logo-navbar {
+        width: 40px;
+        height: auto;
+        margin-right: 10px;
+        vertical-align: middle;
+      }
 
